changes in irrigation background text and services

--- a/app/index.html
+++ b/app/index.html
@@ -127,7 +127,8 @@
         <h2 class="manage-develop__title">
           manage & Develop
         </h2>
-        <img src="./images/irrigation-banner.png" alt="irrigation_image">
+        <!-- <img src="./images/irrigation-banner.png" alt="irrigation_image"> -->
+        <h2 class="manage-develop__irrigation-text">IRRIGATION</h2>
 
         <h2 class="manage-develop__subtitle">
           In vidarbha, maharashtra
