--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300;400;500;700&display=swap" rel="stylesheet">
   
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
 
 
@@ -123,20 +127,16 @@
 
 
     <section class="manage-develop">
-      <div class="manage-develop__banner">
-        <h2 class="manage-develop__title">
-          manage & Develop
-        </h2>
+      <div class="manage-develop__container">
+        <h3 class="manage-develop__title">manage & Develop</h2>
         <!-- <img src="./images/irrigation-banner.png" alt="irrigation_image"> -->
         <h2 class="manage-develop__irrigation-text">IRRIGATION</h2>
 
-        <h2 class="manage-develop__subtitle">
-          In vidarbha, maharashtra
-        </h2>
+        <h3 class="manage-develop__subtitle">In vidarbha, maharashtra</h2>
 
       </div>
       <figure class="manage-develop__vidc-logo">
-        <img src="./images/vidc-brand-logo.png" alt="vidc_brand_logo">
+        <img src="./images/vidc-brand-logo.png" alt="vidc-brand-logo">
       </figure>
 
     </section>
@@ -145,9 +145,9 @@
 
       <div class="services__list">
 
-        <div class="services__content services__content--irrigation">
+        <div class="services__content ">
           <a href="#">
-            <img src="./images/hydro-irrigation.png" alt="hydro_irrigation">
+            <img src="./images/hydro-irrigation.png" alt="hydro-irrigation">
             <div class="services__item product-category">HYDRO IRRIGATION</div>
           </a>
         </div>
@@ -159,16 +159,16 @@
           </a>
         </div>
 
-        <div class="services__content ">
+        <div class="services__content services__content--devlopment">
           <a href="#">
-            <img src="./images/agr-devlopment_green.png" alt="agr-devlopment_green">
+            <img src="./images/agr-devlopment_green.png" alt="agr-devlopment-green">
             <div class="services__item">AGRICULTURAL DEVELOPMENT</div>
           </a>
         </div>
 
-        <div class="services__content">
+        <div class="services__content services__content--devlopment">
           <a href="#">
-            <img src="./images/agr-devlopment_plant.png" alt="agr-devlopment_plant">
+            <img src="./images/agr-devlopment_plant.png" alt="agr-devlopment-plant">
             <div class="services__item">AGRICULTURAL DEVELOPMENT</div>
           </a>
         </div>
