changes in irrigation and managedevlop scss

--- a/app/index.html
+++ b/app/index.html
@@ -122,101 +122,92 @@
 
 
 
-    <!-- irrigation banner & product list -->
+<!-- statr of MANAGE & DEVELOP SECTION -->
+<section class="manage-develop">
+      
+  <div class="manage-develop__container">
+    <h3 class="manage-develop__title">manage & Develop</h2>
+    <h2 class="manage-develop__irrigation-text">IRRIGATION</h2>
+    <h3 class="manage-develop__subtitle">In vidarbha, maharashtra</h2>
+  </div>
+
+  <figure class="manage-develop__vidc-logo">
+  <img src="./images/vidc-brand-logo.png" alt="vidc-brand-logo">
+  </figure>
+</section>
+  <!-- END of MANAGE & DEVELOP SECTION -->
+
+  <!-- start services list -->
+<section class="services">
+
+  <div class="services__list">
+
+    <div class="services__content ">
+      <a href="#">
+      <img src="./images/hydro-irrigation.png" alt="hydro-irrigation">
+      <span class="services__item product-category">hydro irrigation</span>
+      </a>
+    </div>
+
+    <div class="services__content">
+      <a href="#">
+      <img src="./images/hydro-electricity.png" alt="hydro-electricity">
+      <span class="services__item">hydro electricity</span>
+      </a>
+    </div>
+
+    <div class="services__content services__content--devlopment">
+      <a href="#">
+      <img src="./images/agr-devlopment_green.png" alt="agr-devlopment-green">
+      <span class="services__item">agricultural development</span>
+      </a>
+    </div>
+
+    <div class="services__content services__content--devlopment">
+      <a href="#">
+      <img src="./images/agr-devlopment_plant.png" alt="agr-devlopment-plant">
+      <span class="services__item">agricultural development</span>
+      </a>
+    </div>
+
+    <div class="services__content">
+      <a href="#">
+      <img src="./images/sprinkler-irrigation.png" alt="sprinkler-irrigation">
+      <span class="services__item">sprinkler irrigation</span>
+      </a>
+    </div>
+
+  </div>
+
+</section>
+    <!-- End services list -->
 
 
+<!-- vidc section -->
+<section class="vidc">
 
-    <section class="manage-develop">
-      <div class="manage-develop__container">
-        <h3 class="manage-develop__title">manage & Develop</h2>
-        <!-- <img src="./images/irrigation-banner.png" alt="irrigation_image"> -->
-        <h2 class="manage-develop__irrigation-text">IRRIGATION</h2>
+  <div class="vidc__description-container">
+    <img src="./images/video-picture.jpg" class="vidc__video-picture" alt="videopic">
+    <div class="vidc__button-image">
+    <button class="vidc__videobtn"><i class="fa fa-play fa-2x"></i></button>
+    </div>
 
-        <h3 class="manage-develop__subtitle">In vidarbha, maharashtra</h2>
+    <div class="vidc__about-information">
+      <h3 class="vidc__about-heading">About VIDC</h1>
+      <p class="vidc__about-description">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo beatae nam,
+        nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
+        nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
+        nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
+        nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
+        nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
+      </p>
+      <a href="#">KNOW MORE</a>
+    </div>
+  </div>
+</section>
 
-      </div>
-      <figure class="manage-develop__vidc-logo">
-        <img src="./images/vidc-brand-logo.png" alt="vidc-brand-logo">
-      </figure>
-
-    </section>
-
-    <section class="services">
-
-      <div class="services__list">
-
-        <div class="services__content ">
-          <a href="#">
-            <img src="./images/hydro-irrigation.png" alt="hydro-irrigation">
-            <div class="services__item product-category">HYDRO IRRIGATION</div>
-          </a>
-        </div>
-
-        <div class="services__content">
-          <a href="#">
-            <img src="./images/hydro-electricity.png" alt="hydro-electricity">
-            <div class="services__item">HYDRO ELECTRICITY</div>
-          </a>
-        </div>
-
-        <div class="services__content services__content--devlopment">
-          <a href="#">
-            <img src="./images/agr-devlopment_green.png" alt="agr-devlopment-green">
-            <div class="services__item">AGRICULTURAL DEVELOPMENT</div>
-          </a>
-        </div>
-
-        <div class="services__content services__content--devlopment">
-          <a href="#">
-            <img src="./images/agr-devlopment_plant.png" alt="agr-devlopment-plant">
-            <div class="services__item">AGRICULTURAL DEVELOPMENT</div>
-          </a>
-        </div>
-
-        <div class="services__content">
-          <a href="#">
-            <img src="./images/sprinkler-irrigation.png" alt="sprinkler-irrigation">
-            <div class="services__item">SPRINKLER IRRIGATION</div>
-          </a>
-        </div>
-
-      </div>
-
-
-
-    </section>
-    <!-- End  irrigation banner & product list -->
-
-
-    <!-- vidc section -->
-    <section class="vidc">
-
-      <div class="vidc__description-container">
-        <!-- <div class="vidc__video-picture"> -->
-          <img src="./images/video-picture.jpg" class="vidc__video-picture" alt="videopic">
-          <div class="vidc__button-image">
-            <button class="vidc__videobtn"><i class="fa fa-play fa-2x"></i></button>
-          </div>
-
-        <!-- </div> -->
-        <div class="vidc__about-information">
-          <h3 class="vidc__about-heading">About VIDC</h1>
-            <p class="vidc__about-description">
-
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo beatae nam,
-              nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
-              nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
-              nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
-              nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
-              nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
-            </p>
-            <a href="#">KNOW MORE</a>
-        </div>
-      </div>
-
-    </section>
-
-    <!-- end of vidc section -->
+<!-- end of vidc section -->
 
 
   </main>
@@ -238,30 +229,30 @@
 
             <ul>
               <li class="footer__li-on"><a href="#">ABOUT US</a></li>
-              <li><a href="#">Establishment</a></li>
-              <li><a href="#">Our Mission</a></li>
-              <li><a href="#">Our Vision</a></li>
-              <li><a href="#">Members</a></li>
+              <li class="footer__li-off"><a href="#">Establishment</a></li>
+              <li class="footer__li-off"><a href="#">Our Mission</a></li>
+              <li class="footer__li-off"><a href="#">Our Vision</a></li>
+              <li class="footer__li-off"><a href="#">Members</a></li>
             </ul>
           </div>
           <div class="footer__second-list">
 
             <ul>
               <li class="footer__li-on"><a href="#">Important Links</a></li>
-              <li><a href="#">Annual Reports</a></li>
-              <li><a href="#">Circulars</a></li>
-              <li><a href="#">Governing Councils</a></li>
-              <li><a href="#">Governing Councils Decisions</a></li>
+              <li class="footer__li-off"><a href="#">Annual Reports</a></li>
+              <li class="footer__li-off"><a href="#">Circulars</a></li>
+              <li class="footer__li-off"><a href="#">Governing Councils</a></li>
+              <li class="footer__li-off"><a href="#">Governing Councils Decisions</a></li>
             </ul>
           </div>
           <div class="footer__third-list">
 
             <ul>
               <li class="footer__li-on"></li>
-              <li><a href="#">Disclosures</a></li>
-              <li><a href="#">Disclaimer</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Help</a></li>
+              <li class="footer__li-off"><a href="#">Disclosures</a></li>
+              <li class="footer__li-off"><a href="#">Disclaimer</a></li>
+              <li class="footer__li-off"><a href="#">Privacy Policy</a></li>
+              <li class="footer__li-off"><a href="#">Help</a></li>
             </ul>
           </div>
         </div>
