update on index.html service section remove class prod-cat

--- a/app/index.html
+++ b/app/index.html
@@ -145,7 +145,7 @@
     <div class="services__content ">
       <a href="#">
       <img src="./images/hydro-irrigation.png" alt="hydro-irrigation">
-      <span class="services__item product-category">hydro irrigation</span>
+      <span class="services__item">hydro irrigation</span>
       </a>
     </div>
 
