scss file updation

--- a/app/index.html
+++ b/app/index.html
@@ -201,7 +201,7 @@
   </main>
   <!-- footer section -->
 <footer class="footer">
-  <img src="./images/Mask Group 2.png" class="footer__grass-picture"  alt="nograsspic">
+  <img src="./images/Mask Group 2.png" class="footer__grass-picture"  alt="grasspic">
     <!-- right side form & service list -->
   <div class="footer__common-container">
     <div class="footer__main-container">
@@ -259,21 +259,15 @@
             <li>
               <img src="./images/map.png" class="footer__map-location" alt="maplocation">
               <div class="footer__contact-detail footer__contact-detail--top">
-
                 <h3>Contact Us</h3>
                 <a href="#">Near Old Secretary Building, Sinchan Sewa Bhavan, Civil Lines, Nagpur, Maharashtra 440001</a>
-                <!-- <hr> -->
-
               </div>
             </li>
             <li>
                 <img src="./images/mobile.png" class="footer__mobile"  alt="mobile">
               <div class="footer__contact-detail footer__contact-detail--mid">
-
                 <h3> Call Us @</h3>
                 <a href="#">0712 256 0347</a>
-                <!-- <hr> -->
-
               </div>
               </i>
             </li>
@@ -288,14 +282,12 @@
           </ul>
           <div class="footer__social-handle">
             <ul>
-
               <li class="footer__followus">Follow Us</li>
               <li><a href="#"><i class="fa fa-facebook-official fa-2x social_logo"></i></a></li>
               <li><a href="#"><i class="fa fa-youtube  fa-2x  social_logo"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter  fa-2x  social_logo"></i></a></li>
               <li><a href="#"><i class="fa fa-linkedin-square  fa-2x social_logo"></i></a></li>
               <li><a href="#"><i class="fa fa-instagram  fa-2x  social_logo"></i></a></li>
-
             </ul>
           </div>
 
