changes on footer section and about us

--- a/app/index.html
+++ b/app/index.html
@@ -170,19 +170,19 @@
     <!-- End services list -->
 
 <!-- vidc section -->
-<section class="aboutus">
+<section class="about-us">
 
-  <div class="aboutus__container">
-    <div class="aboutus__video-picture"> 
-      <img src="./images/video-picture.jpg" class="aboutus__video-picture" alt="videopic">
-      <div class="aboutus__button-image">
-      <button class="aboutus__videobtn"><i class="fa fa-play fa-2x white"></i></button>
+  <div class="about-us__container">
+    <div class="about-us__video-picture"> 
+      <img src="./images/video-picture.jpg" class="about-us__video-picture" alt="videopic">
+      <div class="about-us__button-image">
+      <button class="about-us__videobtn"><i class="fa fa-play fa-2x white"></i></button>
       </div>
     </div>
 
-    <div class="aboutus__about-information">
-      <h3 class="aboutus__about-heading">About VIDC</h1>
-      <p class="aboutus__about-description">
+    <div class="about-us__about-information">
+      <h3 class="about-us__about-heading">About VIDC</h1>
+      <p class="about-us__about-description">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo beatae nam,
         nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
         nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
