all new changes for footer is applied

--- a/app/index.html
+++ b/app/index.html
@@ -171,7 +171,7 @@
 
 <!-- vidc section -->
 <section class="about-us">
-
+  <img src="./images/greybackground.png" alt="greyimage" class="about-us__greyimage">
   <div class="about-us__container">
     <div class="about-us__video-picture"> 
       <img src="./images/video-picture.jpg" class="about-us__video-picture" alt="videopic">
@@ -180,9 +180,9 @@
       </div>
     </div>
 
-    <div class="about-us__about-information">
-      <h3 class="about-us__about-heading">About VIDC</h1>
-      <p class="about-us__about-description">
+    <div class="about-us__about-us-information">
+      <h3 class="about-us__about-us-heading">About VIDC</h1>
+      <p class="about-us__about-us-description">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo beatae nam,
         nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
         nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
@@ -190,7 +190,7 @@
         nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
         nobis quas quaerat sequi ad at, distinctio provident laborum minus non dolorum
       </p>
-      <a href="#">KNOW MORE</a>
+      <a href="#" class="btn">KNOW MORE</a>
     </div>
     
   </div>
@@ -204,68 +204,68 @@
   <img src="./images/Mask Group 2.png" class="footer__grass-picture"  alt="grasspic">
     <!-- right side form & service list -->
   <div class="footer__common-container">
-    <div class="footer__main-container">
+    <div class="footer__main">
       <div class="footer__right-section">
-        <div class="footer__email">
-          <label for="mail" class="footer__email-label">Subscribe to our Newsletters</label>
+        <div class="footer__news-letter">
+          <label for="mail" class="footer__news-letter-label">Subscribe to our Newsletters</label>
           <input type="email" placeholder="Enter Email Id">
           <button class="footer__submit">SUBSCRIBE NOW</button>
         </div>
         <div class="footer__service-container">
           <div class="footer__first-list">
             <ul>
-              <li class="footer__li-head"><a href="#">ABOUT US</a></li>
-              <li class="footer__li-sub"><a href="#">Establishment</a></li>
-              <li class="footer__li-sub"><a href="#">Our Mission</a></li>
-              <li class="footer__li-sub"><a href="#">Our Vision</a></li>
-              <li class="footer__li-sub"><a href="#">Members</a></li>
+              <li class="footer__service-head"><a href="#">ABOUT US</a></li>
+              <li class="footer__service-title"><a href="#">Establishment</a></li>
+              <li class="footer__service-title"><a href="#">Our Mission</a></li>
+              <li class="footer__service-title"><a href="#">Our Vision</a></li>
+              <li class="footer__service-title"><a href="#">Members</a></li>
             </ul>
           </div>
           <div class="footer__second-list">
             <ul>
-              <li class="footer__li-head"><a href="#">Important Links</a></li>
-              <li class="footer__li-sub"><a href="#">Annual Reports</a></li>
-              <li class="footer__li-sub"><a href="#">Circulars</a></li>
-              <li class="footer__li-sub"><a href="#">Governing Councils</a></li>
-              <li class="footer__li-sub"><a href="#">Governing Councils Decisions</a></li>
+              <li class="footer__service-head"><a href="#">Important Links</a></li>
+              <li class="footer__service-title"><a href="#">Annual Reports</a></li>
+              <li class="footer__service-title"><a href="#">Circulars</a></li>
+              <li class="footer__service-title"><a href="#">Governing Councils</a></li>
+              <li class="footer__service-title"><a href="#">Governing Councils Decisions</a></li>
             </ul>
           </div>
           <div class="footer__third-list">            
             <ul>
-                <li class="footer__head"></li>
-                <li class="footer__li-sub"><a href="#">Disclosures</a></li>
-                <li class="footer__li-sub"><a href="#">Disclaimer</a></li>
-                <li class="footer__li-sub"><a href="#">Privacy Policy</a></li>
-                <li class="footer__li-sub"><a href="#">Help</a></li>
+                <!-- <li class="footer__head"></li> -->
+                <li class="footer__service-title"><a href="#">Disclosures</a></li>
+                <li class="footer__service-title"><a href="#">Disclaimer</a></li>
+                <li class="footer__service-title"><a href="#">Privacy Policy</a></li>
+                <li class="footer__service-title"><a href="#">Help</a></li>
               </ul>
           </div>
         </div>
         <div class="footer__last-container">       
-            <div class="footer__copyright-part">
-              <div> This is the official website of Vidarbha Irrigation Development Corporation
-              </div>
-              <div>© Copyright 2019. All rights reserved</div>
-            </div>
+            <span class="footer__copyright-part">
+               This is the official website of Vidarbha Irrigation Development Corporation
+                © Copyright 2019. All rights reserved
+            </span>
 
-            <div class="footer__poweredby-part">
-              <div class="footer__powered">Powered by</div>
-              <div>Webwerks Pvt Ltd</div>
-            </div>
+            <span class="footer__poweredby-part">
+              <span class="footer__powered">Powered by</span>
+              <span>Webwerks Pvt Ltd</span>
+            </span>
           
         </div>
       </div>
       <!-- leftside contact card -->
-      <div class="footer__contact-container">       <ul>
+      <div class="footer__contact">       
+        <ul>
             <li>
               <img src="./images/map.png" class="footer__map-location" alt="maplocation">
-              <div class="footer__contact-detail footer__contact-detail--top">
+              <div class="footer__contact-detail ">
                 <h3>Contact Us</h3>
                 <a href="#">Near Old Secretary Building, Sinchan Sewa Bhavan, Civil Lines, Nagpur, Maharashtra 440001</a>
               </div>
             </li>
             <li>
                 <img src="./images/mobile.png" class="footer__mobile"  alt="mobile">
-              <div class="footer__contact-detail footer__contact-detail--mid">
+              <div class="footer__contact-detail ">
                 <h3> Call Us @</h3>
                 <a href="#">0712 256 0347</a>
               </div>
@@ -273,7 +273,7 @@
             </li>
             <li>
               <img src="./images/envelope.png" class="footer__envelope" alt="envelope">
-              <div class="footer__contact-detail footer__contact-detail--last">
+              <div class="footer__contact-detail ">
                 <h3>Email Us @</h3>
                 <a href="#">help@vidc.in</a>
               </div>
@@ -281,8 +281,8 @@
             </li>
           </ul>
           <div class="footer__social-handle">
-            <ul>
-              <li class="footer__followus">Follow Us</li>
+            <h3 class="footer__title">Follow Us</h3>
+            <ul class="footer__social-platform">
               <li><a href="#"><i class="fa fa-facebook-official fa-2x social_logo"></i></a></li>
               <li><a href="#"><i class="fa fa-youtube  fa-2x  social_logo"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter  fa-2x  social_logo"></i></a></li>
